--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-figma-squircle": "*",
     "react-native-gesture-handler": "~2.8.0",
     "@react-navigation/bottom-tabs": "*",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "@react-native-community/datetimepicker": "6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
